# market_making_simulator

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: 01_single_run.py  02_regime_sweep.py
mm_sim/: __init__.py  avellaneda_stoikov.py  cli.py  intensity.py  metrics.py  params.py  simulator.py  utils.py
notebooks/: 01_single_path_analysis.ipynb  02_regime_sweep_analysis.ipynb  utils_plotting.py
tests/: test_quotes.py  test_simulator.py
